--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Scheherazade+New:wght@400;500;600;700&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
+
 @import "tailwindcss";
+
+*{
+  text-align: right;
+  direction: rtl;
+}
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --cairo: font-family: "Tajawal", sans-serif;
+  --tajawal: font-family: "Tajawal", sans-serif;
+  --scheherazade : font-family: "Scheherazade New", serif;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-cairo: var(--cairo);
+  --font-tajawal: var(--tajawal)
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +32,9 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--tajawal)
+}
+
+p{
+  font-family: var(--scheherazade);
 }
