--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,11 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@font-face {
+  font-family: "cooper";
+  src: url("/fonts/CooperArabic.ttf") format("truetype");
+}
+
 html {
   direction: rtl;
   text-align: right;
@@ -47,6 +52,7 @@ html {
   --cairo: "Tajawal", sans-serif;
   --tajawal: "Tajawal", sans-serif;
   --scheherazade: "Scheherazade New", serif;
+  --cooper: "cooper", serif;
   --radius: 0.375rem;
   --shadow-x: 0px;
   --shadow-y: 4px;
@@ -107,6 +113,7 @@ html {
   --cairo: "Tajawal", sans-serif;
   --tajawal: "Tajawal", sans-serif;
   --scheherazade: "Scheherazade New", serif;
+  --cooper: "cooper", serif;
   --radius: 0.375rem;
   --shadow-x: 0px;
   --shadow-y: 4px;
@@ -166,6 +173,7 @@ html {
   --font-cairo: var(--cairo);
   --font-tajawal: var(--tajawal);
   --font-scheherazade: var(--scheherazade);
+  --font-cooper: var(--cooper);
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -193,4 +201,9 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+*::selection {
+  background-color: var(--color-primary);
+  color: var(--color-foreground);
 }
