--- a/app/globals.css
+++ b/app/globals.css
@@ -94,7 +94,7 @@ html {
   --accent-foreground: oklch(0.9243 0.1151 95.7459);
   --destructive: oklch(0.6368 0.2078 25.3313);
   --destructive-foreground: oklch(1 0 0);
-  --border: oklch(0.3715 0 0);
+  --border: #404040;
   --input: oklch(0.3715 0 0);
   --ring: oklch(0.7686 0.1647 70.0804);
   --chart-1: oklch(0.8369 0.1644 84.4286);
