feat: built about us page

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Scheherazade+New:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Scheherazade+New:wght@400;500;600;700&display=swap");
 
 @import "tailwindcss";
 
@@ -204,17 +204,16 @@ body {
 
 @layer utilities {
   .section {
-    @apply relative w-full bg-neutral-100 py-10 px-2 md:px-6 lg:px-8 overflow-x-hidden
+    @apply relative w-full bg-neutral-100 py-10 px-2 md:px-6 lg:px-8 overflow-x-hidden;
   }
 
   .section-container {
-    @apply bg-neutral-900 rounded-2xl lg:rounded-3xl
+    @apply bg-neutral-900 rounded-2xl lg:rounded-3xl;
   }
 }
 
 *::selection {
-  background-color: var(--color-primary);
-  color: var(--color-foreground);
+  @apply bg-primary text-background dark:text-foreground;
 }
 
 html.lenis {
