--- a/app/globals.css
+++ b/app/globals.css
@@ -82,7 +82,7 @@ html {
   --foreground: oklch(0.985 0 0);
   --card: oklab(21.779% 0 -0.00002);
   --card-foreground: oklch(0.9219 0 0);
-  --popover: oklch(0.2686 0 0);
+  --popover: oklch(26.862% 0.00003 271.152);
   --popover-foreground: oklch(0.9219 0 0);
   --primary: oklch(0.7686 0.1647 70.0804);
   --primary-foreground: oklch(0 0 0);
@@ -95,7 +95,7 @@ html {
   --destructive: oklch(0.6368 0.2078 25.3313);
   --destructive-foreground: oklch(1 0 0);
   --border: #404040;
-  --input: oklch(0.3715 0 0);
+  --input: oklch(37.15% 0.00004 271.152);
   --ring: oklch(0.7686 0.1647 70.0804);
   --chart-1: oklch(0.8369 0.1644 84.4286);
   --chart-2: oklch(0.6658 0.1574 58.3183);
